--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
         </div>
     </div>
 
+    <!-- Окно ВЫВОДА (Добавить внутрь body) -->
+<div id="withdraw-form-modal" class="modal hidden">
+    <div class="modal-content">
+        <h2 style="color: #ff8c00;">ВЫВОД СРЕДСТВ</h2>
+        <input type="text" id="input-char-name" placeholder="Имя персонажа">
+        <input type="number" id="input-amount" placeholder="Сумма вывода">
+        <p style="font-size: 12px; color: #888;">Минимум: 150 000 руб.</p>
+        <button id="confirm-withdraw-btn" class="btn-orange">ОТПРАВИТЬ</button>
+        <button id="close-withdraw-btn" class="btn-orange" style="background: #444;">ОТМЕНА</button>
+    </div>
+</div>
+
     <!-- Меню ПАУЗЫ -->
     <div id="pause-modal" class="modal hidden">
         <div class="modal-content">
@@ -50,3 +62,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
