--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>FRIDE Jump Pro</title>
+    <title>FRIDE Jump</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,45 +21,37 @@
         </div>
     </div>
 
-    <!-- Окно ВЫВОДА (Добавить внутрь body) -->
-<div id="withdraw-form-modal" class="modal hidden">
-    <div class="modal-content">
-        <h2 style="color: #ff8c00;">ВЫВОД СРЕДСТВ</h2>
-        <input type="text" id="input-char-name" placeholder="Имя персонажа">
-        <input type="number" id="input-amount" placeholder="Сумма вывода">
-        <p style="font-size: 12px; color: #888;">Минимум: 150 000 руб.</p>
-        <button id="confirm-withdraw-btn" class="btn-orange">ОТПРАВИТЬ</button>
-        <button id="close-withdraw-btn" class="btn-orange" style="background: #444;">ОТМЕНА</button>
-    </div>
-</div>
-
-    <!-- Меню ПАУЗЫ -->
     <div id="pause-modal" class="modal hidden">
         <div class="modal-content">
             <h1>ПАУЗА</h1>
             <button id="resume-btn" class="btn-orange">ПРОДОЛЖИТЬ</button>
-            <button id="pause-exit-btn" class="btn-orange" style="background: #555;">ВЫЙТИ</button>
         </div>
     </div>
 
-    <!-- Меню ПРОИГРЫША -->
     <div id="game-over" class="modal hidden">
         <div class="modal-content">
-            <h1 style="color: #ff4444;">УПАЛ!</h1>
+            <h1>УПАЛ!</h1>
             <p>Собрано: 🍼 <span id="final-bottles">0</span></p>
             <button id="restart-btn" class="btn-orange">ЕЩЕ РАЗ</button>
-            <button id="exit-btn" class="btn-orange" style="background: #555;">ВЫЙТИ</button>
         </div>
     </div>
 
-    <!-- Кнопки внизу -->
+    <div id="withdraw-form-modal" class="modal hidden">
+        <div class="modal-content">
+            <h2>ВЫВОД</h2>
+            <input type="text" id="input-char-name" placeholder="Имя персонажа">
+            <input type="number" id="input-amount" placeholder="Сумма">
+            <button id="confirm-withdraw-btn" class="btn-orange">ОТПРАВИТЬ</button>
+            <button id="close-withdraw-btn" class="btn-orange">ОТМЕНА</button>
+        </div>
+    </div>
+
     <div class="footer-btns">
         <button id="withdraw-btn" class="btn-orange">ВЫВОД</button>
-        <button id="support-btn" class="btn-orange">ПОДДЕРЖКА</button>
+        <button id="support-btn" class="btn-orange">СВЯЗЬ</button>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
-
