--- a/index.html
+++ b/index.html
@@ -7,16 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="loader">
-        <div class="f-logo">F</div>
-        <div class="loader-text">FRIDE ROLEPLAY</div>
-    </div>
+    <div id="loader"><div class="f-logo">F</div></div>
 
     <div id="game-ui" class="hidden">
         <canvas id="gameCanvas"></canvas>
         <div class="hud">
-            <div class="score">🍼 <span id="bottles">0</span></div>
-            <div class="balance"><span id="money">0</span> ₽</div>
+            <div>🍼 <span id="bottles">0</span></div>
+            <div>💰 <span id="money">0</span> ₽</div>
             <button id="pause-btn" class="btn-orange">⏸</button>
         </div>
     </div>
@@ -25,30 +22,32 @@
         <div class="modal-content">
             <h1>ПАУЗА</h1>
             <button id="resume-btn" class="btn-orange">ПРОДОЛЖИТЬ</button>
+            <button id="pause-exit-btn" class="btn-orange" style="background:#555">ВЫЙТИ</button>
         </div>
     </div>
 
     <div id="game-over" class="modal hidden">
         <div class="modal-content">
             <h1>УПАЛ!</h1>
-            <p>Собрано: 🍼 <span id="final-bottles">0</span></p>
+            <p>Бутылок: <span id="final-bottles">0</span></p>
             <button id="restart-btn" class="btn-orange">ЕЩЕ РАЗ</button>
+            <button id="exit-btn" class="btn-orange" style="background:#555">ВЫЙТИ</button>
         </div>
     </div>
 
-    <div id="withdraw-form-modal" class="modal hidden">
+    <div id="withdraw-modal" class="modal hidden">
         <div class="modal-content">
             <h2>ВЫВОД</h2>
-            <input type="text" id="input-char-name" placeholder="Имя персонажа">
-            <input type="number" id="input-amount" placeholder="Сумма">
-            <button id="confirm-withdraw-btn" class="btn-orange">ОТПРАВИТЬ</button>
-            <button id="close-withdraw-btn" class="btn-orange">ОТМЕНА</button>
+            <input type="text" id="in-name" placeholder="Ник персонажа">
+            <input type="number" id="in-amount" placeholder="Сумма">
+            <button id="confirm-draw" class="btn-orange">ОТПРАВИТЬ</button>
+            <button id="close-draw" class="btn-orange" style="background:#444">ОТМЕНА</button>
         </div>
     </div>
 
     <div class="footer-btns">
-        <button id="withdraw-btn" class="btn-orange">ВЫВОД</button>
-        <button id="support-btn" class="btn-orange">СВЯЗЬ</button>
+        <button id="open-draw" class="btn-orange">ВЫВОД</button>
+        <button id="support-btn" class="btn-orange">ПОДДЕРЖКА</button>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
