--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="loader"><div class="f-logo">F</div></div>
+    <div id="loader">
+        <div class="f-logo-fire">F</div>
+        <div class="progress-bar-container">
+            <div class="progress-fill"></div>
+        </div>
+        <div class="loader-text">FRIDE ROLEPLAY...</div>
+    </div>
 
     <div id="game-ui" class="hidden">
         <canvas id="gameCanvas"></canvas>
         <div class="hud">
-            <div>🍼 <span id="bottles">0</span></div>
-            <div>💰 <span id="money">0</span> ₽</div>
+            <div class="stats">
+                <div>🍼 <span id="bottles">0</span></div>
+                <div>💰 <span id="money">0</span> ₽</div>
+                <div style="color: #ffae00; font-size: 12px;">🏆 РЕКОРД: <span id="record">0</span>м</div>
+            </div>
             <button id="pause-btn" class="btn-orange">⏸</button>
         </div>
+        <div id="steps-counter">0 м</div>
     </div>
 
     <div id="pause-modal" class="modal hidden">
@@ -28,8 +38,8 @@
 
     <div id="game-over" class="modal hidden">
         <div class="modal-content">
-            <h1>УПАЛ!</h1>
-            <p>Бутылок: <span id="final-bottles">0</span></p>
+            <h1 style="color: #ff4444;">УПАЛ!</h1>
+            <p>РЕКОРД: <span id="final-steps">0</span> м</p>
             <button id="restart-btn" class="btn-orange">ЕЩЕ РАЗ</button>
             <button id="exit-btn" class="btn-orange" style="background:#555">ВЫЙТИ</button>
         </div>
@@ -39,7 +49,7 @@
         <div class="modal-content">
             <h2>ВЫВОД</h2>
             <input type="text" id="in-name" placeholder="Ник персонажа">
-            <input type="number" id="in-amount" placeholder="Сумма">
+            <input type="number" id="in-amount" placeholder="Сумма (от 150к)">
             <button id="confirm-draw" class="btn-orange">ОТПРАВИТЬ</button>
             <button id="close-draw" class="btn-orange" style="background:#444">ОТМЕНА</button>
         </div>
@@ -47,7 +57,7 @@
 
     <div class="footer-btns">
         <button id="open-draw" class="btn-orange">ВЫВОД</button>
-        <button id="support-btn" class="btn-orange">ПОДДЕРЖКА</button>
+        <button id="support-btn" class="btn-orange">СВЯЗЬ</button>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
