--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body>
     <div id="loader">
         <div class="f-logo-fire">F</div>
-        <div class="progress-bar-container">
-            <div class="progress-fill"></div>
-        </div>
-        <div class="loader-text">FRIDE ROLEPLAY...</div>
+        <div class="progress-container"><div id="progress-fill"></div></div>
+        <div class="loader-text">FRIDE ROLEPLAY</div>
     </div>
 
     <div id="game-ui" class="hidden">
@@ -20,8 +18,8 @@
         <div class="hud">
             <div class="stats">
                 <div>🍼 <span id="bottles">0</span></div>
-                <div>💰 <span id="money">0</span> ₽</div>
-                <div style="color: #ffae00; font-size: 12px;">🏆 РЕКОРД: <span id="record">0</span>м</div>
+                <div>💰 <span id="money">0</span></div>
+                <div style="color:#ffae00; font-size:10px">🏆 РЕКОРД: <span id="record">0</span>м</div>
             </div>
             <button id="pause-btn" class="btn-orange">⏸</button>
         </div>
@@ -32,32 +30,32 @@
         <div class="modal-content">
             <h1>ПАУЗА</h1>
             <button id="resume-btn" class="btn-orange">ПРОДОЛЖИТЬ</button>
-            <button id="pause-exit-btn" class="btn-orange" style="background:#555">ВЫЙТИ</button>
+            <button id="pause-exit-btn" class="btn-orange" style="background:#444">ВЫЙТИ</button>
         </div>
     </div>
 
     <div id="game-over" class="modal hidden">
         <div class="modal-content">
-            <h1 style="color: #ff4444;">УПАЛ!</h1>
+            <h1 style="color:#ff4444">УПАЛ!</h1>
             <p>РЕКОРД: <span id="final-steps">0</span> м</p>
             <button id="restart-btn" class="btn-orange">ЕЩЕ РАЗ</button>
-            <button id="exit-btn" class="btn-orange" style="background:#555">ВЫЙТИ</button>
+            <button id="exit-btn" class="btn-orange" style="background:#444">ВЫЙТИ</button>
         </div>
     </div>
 
     <div id="withdraw-modal" class="modal hidden">
         <div class="modal-content">
-            <h2>ВЫВОД</h2>
+            <h2 style="color:#ff8c00">ВЫВОД СРЕДСТВ</h2>
             <input type="text" id="in-name" placeholder="Ник персонажа">
-            <input type="number" id="in-amount" placeholder="Сумма (от 150к)">
-            <button id="confirm-draw" class="btn-orange">ОТПРАВИТЬ</button>
-            <button id="close-draw" class="btn-orange" style="background:#444">ОТМЕНА</button>
+            <input type="number" id="in-amount" placeholder="Сумма (от 150 000)">
+            <button id="confirm-draw" class="btn-orange">ОТПРАВИТЬ ЗАЯВКУ</button>
+            <button id="close-draw" class="btn-orange" style="background:#333">ОТМЕНА</button>
         </div>
     </div>
 
     <div class="footer-btns">
         <button id="open-draw" class="btn-orange">ВЫВОД</button>
-        <button id="support-btn" class="btn-orange">СВЯЗЬ</button>
+        <button id="support-btn" class="btn-orange">ПОДДЕРЖКА</button>
     </div>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
